--- a/main-page/assets/CSS/main.css
+++ b/main-page/assets/CSS/main.css
@@ -43,10 +43,11 @@ h2{
   margin-bottom: 15px;
 }
 h3{
-  font-size: 20px;
+  font-size: 24px;
   font-weight: 600;
-  color:var(--text-grey);
+  color:#FFB41F;
   margin-bottom: 20px;
+  font-family: Georgia, 'Times New Roman', Times, serif;
 }
 h4{
   font-size: 15px;
@@ -69,7 +70,7 @@ h5{
 h6{
   font-size: 15px;
   text-transform:uppercase;
-  letter-spacing: 4px;
+  letter-spacing: 1px;
   display: block;
   font-weight: 600;
   color:#7644FF;
@@ -206,7 +207,7 @@ body {
   font-family: 'Source Sans Pro', sans-serif;
   font-size: 16px;
   margin: 10px;
-  margin-left: 150px;
+  margin-left: 6rem;
   max-width: 470px;
   min-width: 230px;
   max-height: 530px;
@@ -364,12 +365,13 @@ body {
 }
 @media screen and (max-width: 550px){
   .gallery_wrapper{
-    grid-template-columns: 2fr 2fr;
+    grid-template-columns: 1fr;
     align-items: center;
   }
   .snip1543{
-    width: 320px;
-    height: 370px
+    width: 370px;
+    height: 420px;
+    margin-left: 25rem;
     }
 }
 
@@ -389,6 +391,11 @@ body {
 .container{
   position: relative;
   margin-top: 50px;
+}
+@media screen and (max-width: 550px){
+  p{
+    font-size: 18px;
+  }
 }
 /*card & Info 1*/
 .container .card{
@@ -450,7 +457,7 @@ body {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%) rotate(-25deg);
+  transform: translate(-50%, -50%) rotate(0deg);
   width: 270px;
 }
 
@@ -645,6 +652,9 @@ body {
     width: 16rem;
     height: 24rem;
   }
+  p{
+    font-size: 14px;
+  }
 }
 
 
@@ -755,7 +765,7 @@ body {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%) rotate(-25deg);
+  transform: translate(-50%, -50%) rotate(0deg);
   width: 270px;
 }
 
@@ -972,7 +982,7 @@ body {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%) rotate(-25deg);
+  transform: translate(-50%, -50%) rotate(0deg);
   width: 270px;
 }
 
@@ -1235,7 +1245,7 @@ transform: translateY(-5px);
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%) rotate(-25deg);
+  transform: translate(-50%, -50%) rotate(0deg);
   width: 270px;
 }
 
@@ -1435,274 +1445,4 @@ transform: translateY(-5px);
 }
 
 /*Footer CSS*/
- #footer{
-  align-items: center;
-  padding: 10px 0;
-  background-color:  rgba(107,102,102,1);
-  margin-top: 2px;
-  height: 280px;
-  display: block;
-}
-.footer .container{
-  background-color:  rgba(107,102,102,1);
 
-}
-#Group_6 {
-  position: absolute;
-  width: 1920px;
-  height: 200px;
-  right: 0px;
-  top: 0px;
-  align-items: center;
-  overflow: visible;
-}
-#Rectangle_9 {
-  fill: rgba(107,102,102,1);
-}
-.Rectangle_9 {
-  position: absolute;
-  overflow: visible;
-  width: 1920px;
-  height: 200px;
-  left: 0px;
-  top: 0px;
-}
-#Line_7 {
-  fill: transparent;
-  stroke: rgba(35,75,235,1);
-  stroke-width: 3px;
-  stroke-linejoin: miter;
-  stroke-linecap: butt;
-  stroke-miterlimit: 4;
-  shape-rendering: auto;
-}
-.Line_7 {
-  filter: drop-shadow(0px 3px 6px rgba(0, 0, 0, 0.161));
-  overflow: visible;
-  position: absolute;
-  width: 1365px;
-  height: 21px;
-  left: 330.5px;
-  top: 141.5px;
-  transform: matrix(1,0,0,1,0,0);
-}
-#Copyright_IEEE-KJSIEIT_2022 {
-  left: 856.725px;
-  top: 165px;
-  position: absolute;
-  overflow: visible;
-  width: 223px;
-  white-space: nowrap;
-  text-align: center;
-  font-family: Segoe UI;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 18px;
-  color: rgba(255,255,255,1);
-}
-#IEEE-KJSIEIT {
-  left: 330.153px;
-  top: 52px;
-  position: absolute;
-  overflow: visible;
-  width: 162px;
-  white-space: nowrap;
-  text-align: left;
-  font-family: Segoe UI;
-  font-style: normal;
-  font-weight: bold;
-  font-size: 28px;
-  color: rgba(255,255,255,1);
-}
-#favicon-16x16 {
-  filter: drop-shadow(0px 3px 6px rgba(0, 0, 0, 0.161));
-  position: absolute;
-  width: 50px;
-  height: 45px;
-  left: 330px;
-  top: 89px;
-  overflow: visible;
-}
-#Become_a_member__get_notified_ {
-  left: 789.819px;
-  top: 48px;
-  position: absolute;
-  overflow: visible;
-  width: 656px;
-  white-space: nowrap;
-  text-align: left;
-  font-family: Segoe UI;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 21px;
-  color: rgba(255,255,255,1);
-}
-#Follow_Us_on {
-  left: 1494.059px;
-  top: 48px;
-  position: absolute;
-  overflow: visible;
-  width: 125px;
-  white-space: nowrap;
-  text-align: left;
-  font-family: Segoe UI;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 21px;
-  color: rgba(255,255,255,1);
-}
-#Icon_awesome-linkedin-in {
-  fill: rgba(255,255,255,1);
-}
-.Icon_awesome-linkedin-in {
-  overflow: visible;
-  position: absolute;
-  width: 20px;
-  height: 20px;
-  left: 1494px;
-  top: 88.5px;
-  transform: matrix(1,0,0,1,0,0);
-}
-#Icon_awesome-instagram {
-  fill: rgba(255,255,255,1);
-}
-.Icon_awesome-instagram {
-  overflow: visible;
-  position: absolute;
-  width: 20px;
-  height: 20px;
-  left: 1531px;
-  top: 90px;
-  transform: matrix(1,0,0,1,0,0);
-}
-#Icon_awesome-facebook-f {
-  fill: rgba(255,255,255,1);
-}
-.Icon_awesome-facebook-f {
-  overflow: visible;
-  position: absolute;
-  width: 10px;
-  height: 20px;
-  left: 1568px;
-  top: 88.5px;
-  transform: matrix(1,0,0,1,0,0);
-}
-#Icon_awesome-twitter {
-  fill: rgba(255,255,255,1);
-}
-.Icon_awesome-twitter {
-  overflow: visible;
-  position: absolute;
-  width: 20px;
-  height: 15px;
-  left: 1595px;
-  top: 92.5px;
-  transform: matrix(1,0,0,1,0,0);
-}
-#rectangle2 {
-  position: absolute;
-  width: 275px;
-  height: 44px;
-  left: 1579px;
-  top: 155px;
-  overflow: visible;
-}
-#rectangl1 {
-  position: absolute;
-  width: 44px;
-  height: 252.476px;
-  left: 1810px;
-  top: -97px;
-  overflow: visible;
-}
-
-
-
-
-
-/*
-footer .copyright-text p{
-  width:auto;
-  height: 25px;
-  line-height: 12px;
-  font-size: 15px;
-  text-align: center;
-  position: absolute;
-}
-
-#Line_7 {
-  fill: transparent;
-  stroke: rgba(35,75,235,1);
-  stroke-width: 3px;
-  stroke-linejoin: miter;
-  stroke-linecap: butt;
-  stroke-miterlimit: 4;
-  shape-rendering: auto;
-}
-.Line_7 {
-  filter: drop-shadow(0px 3px 6px rgba(0, 0, 0, 0.161));
-  overflow: hidden;
-  position: relative;
-  width: 1365px;
-  height: 21px;
-  transform: matrix(1,0,0,1,0,0);
-}
-
-footer .container .footer-text{
-  align-items: center;
-  overflow: hidden;
-  width: 656px;
-  top: 10px;
-  white-space: nowrap;
-  text-align: left;
-  font-family: Segoe UI;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 21px;
-  color: rgba(255,255,255,1);
-}
-
-#Icon_awesome-linkedin-in {
-  fill: rgba(255,255,255,1);
-}
-.Icon_awesome-linkedin-in {
-  overflow: visible;
-  position: absolute;
-  width: 20px;
-  height: 20px;
-  left: 1494px;
-  transform: matrix(1,0,0,1,0,0);
-}
-#Icon_awesome-instagram {
-  fill: rgba(255,255,255,1);
-}
-.Icon_awesome-instagram {
-  overflow: visible;
-  position: absolute;
-  width: 20px;
-  height: 20px;
-  left: 1531px;
-  transform: matrix(1,0,0,1,0,0);
-}
-#Icon_awesome-facebook-f {
-  fill: rgba(255,255,255,1);
-}
-.Icon_awesome-facebook-f {
-  overflow: visible;
-  position: absolute;
-  width: 10px;
-  height: 20px;
-  left: 1568px;
-  transform: matrix(1,0,0,1,0,0);
-}
-#Icon_awesome-twitter {
-  fill: rgba(255,255,255,1);
-}
-.Icon_awesome-twitter {
-  overflow: visible;
-  position: absolute;
-  width: 20px;
-  height: 25px;
-  left: 1595px;
-  transform: matrix(1,0,0,1,0,0);
-} */
