--- a/main-page/contact-form/contactform.css
+++ b/main-page/contact-form/contactform.css
@@ -327,14 +327,15 @@
   
   .container .card{
     position: absolute;
-    left: 92rem;
-    top: 27%;
+    left: 75rem;
+    top: 30%;
     width: 400px;
     height: 450px;
     background: #fff;
     margin: 0 auto;
     border-radius: 4px;
     box-shadow:0 2px 10px rgba(0,0,0,.2);
+    margin-left: 5rem;
   }
   .container .card:before,
   .container .card:after
@@ -432,7 +433,8 @@
         flex-direction: column;
         margin-top: 10px;
         left: 6rem;
-        top: 10rem
+        top: 10rem;
+        margin-left: 0rem;
       
     }
   
@@ -482,44 +484,6 @@
   }
 
   /*Footer*/
-  .footer_wrapper{
-    background: #000000;
-    padding: 20px,0;
-    width: 100%;
-    height: 20rem;
-    align-items: center;
-  }
-  .footer_wrapper .banner{
-    align-items: center;
-  }
-
-
-  .footer_wrapper .subt{
-    margin-top: 50px;
-    font-style: italic;
-  }
-  .footer-logo{
-    color: var(--text-white);
-    font-size: 32px;
-    text-align: left;
-    font-weight: 600;
-    margin-left: 20px;
-    width: 1500px;
-    height: 4px;
-    background: #234BEB;
-    margin-top: 60px;
-    filter: drop-shadow(0px 3px 6px rgba(0, 0, 0, 0.161));
-		overflow: visible;
-  }
-.footer_wrapper .social{
-display: inline-block;
-flex-wrap: nowrap;
-margin-right: 50px;
-
-}
-.social .footer-item{
-  text-align: right;
-  margin-right: 50px;
-}
+ 
 
 
