--- a/main-page/team/style.css
+++ b/main-page/team/style.css
@@ -1,49 +1,238 @@
 * {
     box-sizing: border-box;
   }
+  :root{
+    /*COLORS*/
+    --primary-backcolor: #F84312;
+    --gradient-color: linear-gradient(-224deg, #1c99FE 20.69%, #7644FF 50.19%,var(--primary-backcolor) 79.69%);
+    --grey-color: #808080;
+    --bg-dark: #091020;
+    /*TEXT COLOR*/
+    --primary-font: 'Oswald', sans-serif;
+    --primary-text: #2b54d9;
+    --text-grey: #C0C0C0;
+    --text-white: #ffff;
+    --text-banner: #F84312;  
+  }
+  
+  h1{
+    font-size: 54px;
+    line-height: 68px;
+    font-weight: 800;
+    font-family:Georgia, 'Times New Roman', Times, serif ;
+    color:#FFB41F;
+    margin-bottom: 20px;
+    letter-spacing: 0.5rem;
+  }
+  h1 span{
+    color:var(--primary-backcolor);
+  }
+  h2{
+    font-size: 50px;
+    line-height: 1.3;
+    font-weight: 600;
+    color: #7644ff;
+    margin-bottom: 15px;
+  }
+  h3{
+    font-size: 34px;
+    font-weight: 800;
+    color:#2E3C76;
+    margin-bottom: 20px;
+    font-family: 'Times New Roman', Times, serif;
+
+  }
+  h4{
+    font-size: 15px;
+    text-transform:uppercase;
+    letter-spacing: 4px;
+    display: block;
+    font-weight: 600;
+    color:#0563fb;
+    margin-bottom: 19px;
+  }
+  h5{
+    font-size: 15px;
+    text-transform:uppercase;
+    letter-spacing: 4px;
+    display: block;
+    font-weight: 600;
+    color:(--text-grey);
+    margin-bottom: 19px;
+  }
+  h6{
+    font-size: 15px;
+    text-transform:uppercase;
+    letter-spacing: 1px;
+    display: block;
+    font-weight: 600;
+    color:#7644FF;
+    margin-bottom: 19px;
+  }
+  p{
+    color:var(--text-grey);
+    font-size: 20px;
+    line-height: 28px;
+    letter-spacing: 1px;
+    font-weight: 400;
+  }
+  .subtitle{
+    display: inline-block;
+    font-weight: 600;
+    letter-spacing: 0.5px;
+    line-height: 18px;
+    font-size: 28px;
+    margin-bottom: 12px;
+    background:var(--gradient-color);
+    -webkit-background-clip:text;
+    -webkit-text-fill-color: transparent;
+  }
+  body {
+    background: #002436;
+    font-family: 'Open Sans', Helvetica, Arial, sans-serif;
+    min-width: 1080px;
+  }
+   
+  /*Navbar!!*/
+  
+  .navbar{
+    background: #002436;
+    width: 100%;
+  }
+   .navbar-brand{
+    
+      font-family: 'Lato', sans-serif;
+      font-size: 100px;
+      margin: 0px;
+    
+  }
+  .header_wrapper .navbar{
+    padding:15px 0;
+    -webkit-transition:all .2s linear;
+    -o-transition:all .2s linear;
+    transition:all .2s linear;
+    margin-right: 5px;
+  
+  }
+  .header_wrapper .navbar-brand img{
+    height:auto;
+  }
+  .header_wrapper .navbar-toggler{
+    border:0;
+    line-height: 6px;
+    color:#ffff;
+  }
+  .header_wrapper .nav-item{
+    margin: 0 20px;
+  }
+  .header_wrapper .nav-item .nav-link{
+    position: relative;
+    font-size: 16px;
+    font-weight: 500;
+    color: var(--text-grey);
+    display: inline-block;
+  }
+  .header_wrapper .nav-item .nav-link::after{
+    position:absolute;
+    content: '';
+    left: 0;
+    width: 0;
+    height: 2px;
+    background: #2b54d9;
+    transition: 0.3s;
+    bottom:0;
+  }
+  .header_wrapper .nav-item .nav-link.active::after,
+  .header_wrapper .nav-item .nav-link:hover::after{
+    width: 100%;
+  }
+  .header_wrapper .nav-item .nav-link.active,
+  .header_wrapper .nav-item .nav-link:hover{
+    color: var(--text-white);
+  }
+  .header-scrolled{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background-color:#000000;
+    -webkit-box-shadow: 0 4px 6px 0 rgba(12,0,46,.05);
+    box-shadow: 0 4px 6px 0 rgba(12,0,46,.05);
+  }
+  .header-scrolled .nav-item .nav-link.active,
+  .header-scrolled .nav-item .nav-link:hover{
+    color: var(--primary-text);
+  }
+  .header_wrapper .nav-item .contact-button {
+    display: inline-block;
+    padding: 0 24px;
+    border: 0;
+    text-decoration: none;
+    border-radius: 15px;
+    background-color: rgba(255,255,255,0.1);
+    border: 1px solid rgba(255,255,255,0.1);
+    backdrop-filter: blur(30px);
+    color: rgba(255,255,255,0.8);
+    font-size: 14px;
+    letter-spacing: 2px;
+    cursor: pointer;
+    text-transform: uppercase;
+  }
+  
+  .header_wrapper .nav-item .contact-button:hover {
+    background-color: rgba(255,255,255,0.2);
+  }
+
+  .core_wrapper{
+   background: #002436;
+   margin-top: 6.5rem;
+   align-items: center;
+   justify-content: center;
+  }
   .container{
     width:900px;
     margin:0px auto;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    align-items: center;
+    justify-content: center;
   }
   .column {
     float: left;
     width: 33.33%;
     padding: 0 5px;
   }
-  .row {
-    margin: 0 -10px;
-    
-}
 
-  .row:after {
-    content: "";
-    display: table-row;
-    clear: both;
-    padding: auto;
-    margin: 10px;
-  }
 
-  @media screen and (max-width: 700px) {
+  @media screen and (max-width: 550px) {
     
     .container{
-     width: 100%;
+    width:auto;
+    grid-template-columns: 1fr;
+    align-items: center;
+    justify-content: center;
+   }
+   .core_wrapper{
+    margin-top: 7.1rem;
    }
      
-     .column {
-       width: 100%;
-       display: block;
-       margin-bottom: 20px;
-     }
    }
 
    .card {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     padding: 10px;
     text-align: center;
-    background-color: rgb(110, 171, 240);
+    background:#808080;
     border-radius:10px;
     cursor:pointer;
     margin: 20px;
+    width: 22rem;
+    height: 26rem;
+  }
+  @media screen and (max-width: 550px){
+    .card{
+      margin-left: 22rem;
+    }
   }
   .card .profile{
      border-radius:10px;
@@ -60,6 +249,7 @@
     height:100%;
     position:relative;
     overflow:hidden;
+    justify-content: center;
   }
   .card .content .back{
     position:absolute;
@@ -106,8 +296,10 @@
   .card .content .back .social-icon li{
     display:inline-block;
     list-style: none;
-	margin: 0 5px;
-	float: left;
+ 	  margin: 0 5px;
+   	float: center;
+     margin-top: 5rem;
+   
   }
   
   .card .content .back .social-icon li a{
@@ -119,81 +311,224 @@
     text-align:center;
     line-height:40px;
     border-radius:100%;
-
-    
   }
 
   .card .content .back .social-icon li a:hover{
     background: rgb(110, 171, 240);
   }
+.sub-core_wrapper{
+  background: #002436;
+  margin-top: 0.5rem;
+}
+.admin_wrapper{
+  background: #002436;
+  margin-top: 0.5rem;
+}
+.jointadmin_wrapper{
+  background: #002436;
+  margin-top: 0.5rem;
+}
 
-  .team-container
+
+.team_wrapper{
+  background: #002436;
+  margin-top: 0.5rem;
+  height: auto;
+}
+.team_wrapper .team_container
 {
-    width: 900px;
-    height: 299px;
-    margin: 10px;
-    float: left; /* stack each div horizontally */
+   width:900px;
+   height: auto;
+    margin:0px auto;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    align-items: center;
+    justify-content: center;
 }
 
 img
 {
    border-radius: 10px;
 }
-
-.team-back h2
-{
-    position: absolute;
+.team_wrapper .team_container .team_card {
+  flex: initial;
+  position: relative;
+  height: 45rem;
+  width: 32rem;
+  -moz-perspective: 200rem;
+  perspective: 200rem;
+  margin: 2rem;
 }
-
-.team-back p
-{
-    position: absolute;
-    top: 50px;
-    font-size: 15px;
+.card__side {
+  height: 35rem;
+  transition: all 0.8s ease;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  -webkit-backface-visibility: hidden;
+  /* We don't want to see the back part of the element. */
+  backface-visibility: hidden;
+  /* We don't want to see the back part of the element. */
+  border-radius: 3px;
+  overflow: hidden;
+  /* The image is overflowing the parent. */
+  box-shadow: 0 2rem 6rem rgba(0, 0, 0, 0.15);
 }
-
-.team-front h2
-{
-    position: absolute;
-    padding: 10px;
-    top: 200px;
-    color: #000;
+.card__side--front {
+  background-image:url(https://wallpaperaccess.com/full/2137199.jpg);
 }
-
-/* style the maincontainer class with all child div's of class .front */
-.team-container > .team-front
-{
-    position: absolute;
-    transform: perspective(600px) rotateY(0deg);
-    
-    width: 302px;
-    height: 290px;
-    
-    backface-visibility: hidden; /* cant see the backside elements as theyre turning around */
-    transition: transform .5s linear 0s;
+.card__side--back {
+  background-color: #fff;
+  transform: rotateY(180deg);
 }
-
-/* style the maincontainer class with all child div's of class .back */
-.team-container > .team-back
-{
-    position: absolute;
-    transform: perspective(600px) rotateY(180deg);
-    background: #262626;
-    color: #fff;
-    width: 302px;
-    height: 290px;
-    border-radius: 10px;
-    padding: 5px;
-    backface-visibility: hidden; /* cant see the backside elements as theyre turning around */
-    transition: transform .5s linear 0s;
+.team_card:hover .card__side--back {
+  transform: rotateY(0);
 }
-
-.team-container:hover > .team-front
-{
-    transform: perspective(600px) rotateY(-180deg);
+.team_card:hover .card__side--front {
+  transform: rotateY(-180deg);
 }
+.card__theme {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  top: 54%;
+  width: 90%;
+  text-align: center;
+}
+.card__theme-box {
+  color: #F84312;
+  margin-bottom: 8rem;
+}
+.card__subject {
+  font-family: "Inconsolata", monospace;
+  letter-spacing: 0.5rem;
+  font-size: 1.6rem;
+  text-transform: uppercase;
+  margin-bottom: 1rem;
+}
+.card__title {
+  font-family: "VT323", monospace;
+  text-transform: uppercase;
+  margin-bottom: 1rem;
+  font-size: 5rem;
+  font-weight: 200;
+  margin-top: 2.5rem;
+}
+.card__cover {
+  position: relative;
+  background-size: cover;
+  height: 10%;
+  background-image:url(https://wallpaperaccess.com/full/2137199.jpg);
+}
+.card__heading {
+  text-align: center;
+  color: #fff;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 75%;
+}
+.card__heading-span {
+  font-family: "VT323", monospace;
+  font-size: 4.2rem;
+  font-weight: 300;
+  text-transform: uppercase;
+  padding: 1rem 1.5rem;
+  color: #fff;
+}
+.card__details {
+  font-family: "Inconsolata", monospace;
+  padding: 4rem 2rem;
+  background:#fff;
+}
+.card__details ul {
+  list-style: none;
+  width: 80%;
+  margin: 0 auto;
+}
+.card__details ul li {
+  text-align: center;
+  font-size: 1.8rem;
+  padding: 1rem;
+}
+.card__details ul li:not(:last-child) {
+  border-bottom: 1px solid #eee;
+}
+@media only screen and (max-width: 550px){
+  .team_wrapper .team_container{
+    display: grid;
+    grid-template-columns: 1fr;
+    justify-content: center;
+    align-items: center;
+    width: 35rem;
+  }
+  .team_container .team_card {
+    height: auto;
+    border-radius: 3px;
+    background-color: #fff;
+    box-shadow: 0 2rem 6rem rgba(0, 0, 0, 0.15);
+    height: 40rem;
+    width: 21rem;
+  }
+  .card__subject {
+    font-family: "Inconsolata", monospace;
+    letter-spacing: 0.5rem;
+    font-size: 1em;
+    text-transform: uppercase;
+    margin-bottom: 1rem;
+  }
+  .card__title {
+    font-family: "VT323", monospace;
+    text-transform: uppercase;
+    margin-bottom: 1rem;
+    font-size: 2rem;
+    font-weight: 200;
+    margin-top: 1rem;
+  }
+  .card__side {
+    height: 23rem;
+    position: relative;
+    box-shadow: none;
+  }
+  .card__details {
+    font-family: "Inconsolata", monospace;
+    background:#fff;
+    height: 35rem;
+  }
+  .card__side--front {
+    clip-path: polygon(0 15%, 100% 0, 100% 100%, 0 100%);
+  }
+  .card__side--back {
+    transform: rotateY(0);
+  }
+  .card:hover .card__side--front {
+    transform: rotateY(-180deg);
+    display: none;
+  }
+  .card__details {
+    padding: 3rem 2rem;
+  }
+  .card__theme {
+    position: relative;
+    top: 0;
+    left: 0;
+    transform: translate(0);
+    width: 100%;
+    padding: 5rem 4rem 1.5rem 4rem;
+    text-align: right;
+  }
+  .card__theme-box {
+    margin-bottom: 1.5rem;
+  }
+  .card__title {
+    font-size: 4rem;
+  }
+  .footer .container .footermain{
+    max-width: 60rem;
+  }
 
-.team-container:hover > .team-back
-{
-    transform: perspective(600px) rotateY(0deg);
+
 }
